.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0.6 - Unreleased
------------------

4.0.5 - 2011-04-06
------------------

- Fixed: "showing field with error is broken in edit view"
  This fixes http://dev.plone.orgplone/ticket/11686.
  [gotcha]

- Fixed: "missing required icon in tabs in edit view"
  This fixes http://dev.plone.orgplone/ticket/11685.
  [gotcha]

- Added "rss" alias to "RSS". 
  This fixes http://dev.plone.orgplone/ticket/11638.
  [gotcha]

- Fixed: "Show all" livesearch link manages "current folder only" option.
  This fixes http://dev.plone.orgplone/ticket/11414.
  [thomasdesvenain]

- Fixed: "Show all" was not displayed in live search
  when limit result was exceeded.
  This fixes http://dev.plone.orgplone/ticket/11628.
  [thomasdesvenain]

4.0.4 - 2011-02-26
------------------

- Remove useless trailing slash in 404.
  This fixes http://dev.plone.org/plone/ticket/11550
  [gotcha]

- Use correct argument order in utranslate.py script.
  This fixes http://dev.plone.org/plone/ticket/10395
  [fRiSi]

- Add missing security declarations on PropertiesTool.
  [davisagli]

- Add fallback icon for control panels with no icon, in the portlet_prefs
  portlet. This fixes http://dev.plone.org/plone/tickets/11112.
  [topherh, davisagli]

- Remove js-generated inline style from searchbox. Same CSS is in public.css.
  See http://dev.plone.org/plone/changeset/40654,
  Fixes http://dev.plone.org/plone/ticket/11186
  [msmith64]

- Fixed handling of relative links used as default pages
  This fixes http://dev.plone.org/plone/ticket/11340
  [fRiSi]

- Re-instate spinner.gif (animation), lost in the move to PNGs. The static
  spinner.png has been deprecated.
  Fixes http://dev.plone.org/plone/ticket/11504
  [mj]

4.0.3 - 2011-01-18
------------------
