@@ -8,6 +8,10 @@ Changelog
 4.0.6 - Unreleased
 ------------------
 
+- Fix form submission when it has more than 5 tabs.
+  This fixes http://dev.plone.org/plone/ticket/10868.
+  [thomasdesvenain]
+
 4.0.5 - 2011-04-06
 ------------------
 
@@ -19,7 +23,7 @@ Changelog
   This fixes http://dev.plone.orgplone/ticket/11685.
   [gotcha]
 
-- Added "rss" alias to "RSS". 
+- Added "rss" alias to "RSS".
   This fixes http://dev.plone.orgplone/ticket/11638.
   [gotcha]
 
